[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Theme/UI.tres" type="Theme" id=1]
[ext_resource path="res://assets/Profiles/agent-red.png" type="Texture" id=2]
[ext_resource path="res://src/World/UI/Intel.gd" type="Script" id=3]
[ext_resource path="res://assets/Terrain/blue-base.png" type="Texture" id=4]

[node name="Intel" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.470588 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntelTypes" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -142.0
margin_right = 150.0
margin_bottom = 142.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitBack" type="ColorRect" parent="IntelTypes"]
margin_right = 300.0
margin_bottom = 140.0
rect_min_size = Vector2( 300, 140 )
color = Color( 0.196078, 0.196078, 0.588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnitIntel" type="VBoxContainer" parent="IntelTypes/UnitBack"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -50.0
margin_right = 120.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class" type="Label" parent="IntelTypes/UnitBack/UnitIntel"]
margin_right = 250.0
margin_bottom = 13.0
text = "AGENT"
align = 1

[node name="Stats" type="HBoxContainer" parent="IntelTypes/UnitBack/UnitIntel"]
margin_top = 17.0
margin_right = 250.0
margin_bottom = 67.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="IntelTypes/UnitBack/UnitIntel/Stats"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="Profile" type="TextureRect" parent="IntelTypes/UnitBack/UnitIntel/Stats/CenterContainer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true

[node name="Stats" type="GridContainer" parent="IntelTypes/UnitBack/UnitIntel/Stats"]
margin_left = 54.0
margin_right = 250.0
margin_bottom = 50.0
columns = 2

[node name="HP" type="Label" parent="IntelTypes/UnitBack/UnitIntel/Stats/Stats"]
margin_right = 110.0
margin_bottom = 13.0
text = "HP: 16 / 16"

[node name="Attack" type="Label" parent="IntelTypes/UnitBack/UnitIntel/Stats/Stats"]
margin_left = 114.0
margin_right = 196.0
margin_bottom = 13.0
text = "Attack: 6"

[node name="MoveType" type="Label" parent="IntelTypes/UnitBack/UnitIntel/Stats/Stats"]
margin_top = 17.0
margin_right = 110.0
margin_bottom = 30.0
text = "Move Type: Foot"

[node name="MoveRange" type="Label" parent="IntelTypes/UnitBack/UnitIntel/Stats/Stats"]
margin_left = 114.0
margin_top = 17.0
margin_right = 196.0
margin_bottom = 30.0
text = "Move Range: 6"

[node name="AttackRange" type="Label" parent="IntelTypes/UnitBack/UnitIntel/Stats/Stats"]
margin_top = 34.0
margin_right = 110.0
margin_bottom = 47.0
text = "Attack Range: (2,2)"

[node name="Lore" type="Label" parent="IntelTypes/UnitBack/UnitIntel"]
margin_top = 71.0
margin_right = 250.0
margin_bottom = 84.0
text = "A special operations agent"
align = 3
valign = 1
autowrap = true

[node name="TerrainIntel" type="VBoxContainer" parent="IntelTypes"]
margin_top = 144.0
margin_right = 300.0
margin_bottom = 284.0

[node name="ColorRect" type="ColorRect" parent="IntelTypes/TerrainIntel"]
margin_right = 300.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )
color = Color( 0.196078, 0.588235, 0.196078, 1 )

[node name="Terrain" type="VBoxContainer" parent="IntelTypes/TerrainIntel/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -130.0
margin_top = -50.0
margin_right = 120.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="IntelTypes/TerrainIntel/ColorRect/Terrain"]
margin_right = 250.0
margin_bottom = 13.0
text = "BASE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="IntelTypes/TerrainIntel/ColorRect/Terrain"]
margin_top = 17.0
margin_right = 250.0
margin_bottom = 67.0

[node name="CenterContainer" type="CenterContainer" parent="IntelTypes/TerrainIntel/ColorRect/Terrain/Stats"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )

[node name="TerrainView" type="TextureRect" parent="IntelTypes/TerrainIntel/ColorRect/Terrain/Stats/CenterContainer"]
margin_left = 9.0
margin_top = 9.0
margin_right = 41.0
margin_bottom = 41.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 4 )
expand = true

[node name="Stats" type="VBoxContainer" parent="IntelTypes/TerrainIntel/ColorRect/Terrain/Stats"]
margin_left = 54.0
margin_right = 214.0
margin_bottom = 50.0

[node name="Defense" type="Label" parent="IntelTypes/TerrainIntel/ColorRect/Terrain/Stats/Stats"]
margin_right = 160.0
margin_bottom = 13.0
text = "Defense Bonus: 1"

[node name="MoveLabel" type="Label" parent="IntelTypes/TerrainIntel/ColorRect/Terrain/Stats/Stats"]
margin_top = 17.0
margin_right = 160.0
margin_bottom = 30.0
text = "Move Cost"
align = 1

[node name="Move" type="Label" parent="IntelTypes/TerrainIntel/ColorRect/Terrain/Stats/Stats"]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 47.0
text = "Foot: 1 | Tread: 1 | Wheel 1"

[node name="Lore" type="Label" parent="IntelTypes/TerrainIntel/ColorRect/Terrain"]
margin_top = 71.0
margin_right = 250.0
margin_bottom = 84.0
rect_min_size = Vector2( 250, 0 )
text = "A tower containing"
align = 3
autowrap = true
